# src/modules/order/order.routes.js
@@ -1,12 +1,11 @@
 import { Router } from "express";
+import {
+  createPayosPayment,
+  returnConfirmPayment,
+} from "./order.controller.js";
 
 const orderRouter = Router();
 
-/**
- * Get /cart
- * Creat / cart
- * Update /cart
- * delete /cart
- */
-
+orderRouter.post("/createPayos", createPayosPayment);
+orderRouter.get("/return", returnConfirmPayment);
 export default orderRouter;
