# src/routes/index.js
@@ -8,6 +8,7 @@ import cartRouter from "../modules/cart/cart.routes.js";
 import orderRouter from "../modules/order/order.routes.js";
 import { verifyUser } from "../common/middlewares/verifyUser.js";
 import { authMiddleware } from "../common/middlewares/authMiddleware.js";
+import commentRouter from "./../modules/comment/comment.routes.js";
 const router = Router();
 
 router.use("/auth", authRoutes);
@@ -18,5 +19,6 @@ router.use("/sub-categories", subCategoryRoutes);
 
 router.use("/cart", authMiddleware, verifyUser, cartRouter);
 router.use("/order", orderRouter);
+router.use("/comment", commentRouter);
 
 export default router;
